--- a/manual/chronojump_manual_es.lyx
+++ b/manual/chronojump_manual_es.lyx
@@ -841,9 +841,16 @@ n
  cronometrar ritmos complejos u otras aplicaciones.
  Actualmente ya es funcional gracias al programa Chronojump_mini.
  Más información en este correo: 
-\begin_inset LatexCommand url
-name "CORREO LISTA N CHRONOPICS!!!!"
-target "http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf"
+\begin_inset ERT
+status open
+
+\begin_layout Standard
+
+
+\backslash
+url{http://mail .gnome .org/ archives/ chronojump- list/ 2008-July/ msg00015
+ .html}
+\end_layout
 
 \end_inset
 
@@ -1715,7 +1722,7 @@ Chronopic
 \begin_inset Quotes erd
 \end_inset
 
- en el menú plataforma.
+ en el menú del mismo nombre.
  A continuación le aparecerá un diálogo que le pedirá que haga click en
  
 \begin_inset Quotes eld
@@ -4824,7 +4831,7 @@ status open
 \begin_layout Standard
 \align center
 \begin_inset Graphics
-	filename chronojump_main_window_spanish.png
+	filename chronojump_stats_window.png
 	lyxscale 50
 	scale 50
 
