--- a/web/data/authors.txt
+++ b/web/data/authors.txt
@@ -1,6 +1,8 @@
 <ul>
 <li><a href="http://www.xdeblas.com">Xavier de Blas</a></li>
 <li><a href="http://www.iearobotics.com/personal/juan/">Ju&aacute;n Gonz&aacute;lez</a></li>
-<li><a href="mailto:juanfer@juanfer.com.ar">Juan Fernando Pardo</a>
-<li><a href="http://www.iearobotics.com/personal/ricardo/index.html">Ricardo Gómez</a>
+<li><a href="mailto:juanfer@juanfer.com.ar">Juan Fernando Pardo</a></li>
+<li><a href="http://www.iearobotics.com/personal/ricardo/index.html">Ricardo Gómez</a></li>
+<li><a href="http://www.logicbrick.com/">Sharad Shankar</a></li>
+<li><a href="http://www.logicbrick.com/">Onkar Nath Mishra</a></li>
 </ul>
