--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-18  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-10-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* POTFILES.in: Add missing file.
